CHANGES


2015-05-11 (nb)

Source code reformatting and restructuring for better readability. Updated and improved Makefile and other text files.

- Source code reformatting and restructuring for better readability.
- Updated and improved Makefile files.
- Updated README and other text files.


2015-04-11 (nb)

Function names changed to lower case. Fixed Makefile files. Improved test scripts.

- Function names changed to lower case, for consistency ans good style.
- PROGMEM variables made constants, for compatibility with C compiler.
- Changed max7219led8x8_test/main.c testing script, more interesting.
- Fixed Makefiles to work under Windows newer SDKs.
- Fixed typos in texts, other changes.


2015-03-03 (nb)

Updated README, added LICENSE.


2015-01-01 (nb)

Updated TODO list.


2014-07-20 (nb)

Added code for "scheduled" driver, Conway's Game of Life, new functions. Added ".hex" files. Updated texts.

- Added the "scheduled" driver and testing program.
- Added Conway's Game of Life code.
- Moved file "max7219led8x8f.h" to the library folder.
- Added new function MAX7219_buffer_row.
- Updated text and comments in the source file. Updated "RESEARCH.txt" and "TODO.txt" files. Added "README.txt" for the library.
- Added all ".hex" files.
- Changed ".hgignore" file.


2014-07-13 (nb)

Files added to the repository.

